# shaders

./: .gitmodules  README.md  abstract.md  spirv.cxx
assets/: .gitattributes  tyrian.sprites
assets/helipad/charlie/: sheen.ktx2
assets/helipad/ggx/: specular.ktx2
assets/helipad/lambertian/: diffuse.ktx2
attributes/: attrib1.cxx  attrib2.cxx
cube/: CMakeLists.txt  cube.cxx
cube2/: CMakeLists.txt  cube2.cxx
dxil/: dxil.sln  semantic.cxx
dxil/WaveIntrinsics/: D3D12SM6WaveIntrinsics.cpp  D3D12SM6WaveIntrinsics.h  DXSample.cpp  DXSample.h  DXSampleHelper.h  Main.cpp  UILayer.cpp  UILayer.h  WaveIntrinsics.vcxproj  Win32Application.cpp  Win32Application.h  build_shaders.bat  mag_frag.dxil  mag_vert.dxil  readme.md  shaders.cxx  stdafx.h  wave_frag.dxil  wave_vert.dxil
dxil/dxil-signing/: CLI11.hpp  README.md  dxcapi.h  dxil-signing.vcxproj  main.cpp
dxil/nbody/: D3D12nBodyGravity.cpp  D3D12nBodyGravity.h  D3D12nBodyGravity.vcxproj  DXSample.cpp  DXSample.h  Main.cpp  SimpleCamera.cpp  SimpleCamera.h  Win32Application.cpp  build_shaders.bat  frag.dxil  geom.dxil  integrate.dxil  nbody.vcxproj  nbody.vcxproj.filters  readme.md  shaders.cxx  stdafx.h  vert.dxil
dxil/shadertoy/: D3D12HelloConstBuffers.cpp  D3D12HelloConstBuffers.h  Main.cpp  Win32Application.h  band1.dxil  band2.dxil  bands.dxil  build_shaders.bat  clouds.dxil  comparison.dxil  d3dx12.h  devil.dxil  fractal.dxil  hypercomplex.dxil  menger.dxil  modulation.dxil  paint.dxil  raymarch.dxil  segment.dxil  shaders.cxx  shadertoy.vcxproj  sphere.dxil  square.dxil  stdafx.h  thumbnails.dxil  triangle_grid.dxil  vert.dxil
dxil/tessellation/: BasicTessellationApp.cpp  FrameResource.cpp  FrameResource.h  build_shaders.bat  frag.dxil  shaders.cxx  tesc.dxil  tese.dxil  tessellation.vcxproj  vert.dxil
geom/: CMakeCache.txt  CMakeLists.txt  geom.cxx
implicit/: spirv.cxx
include/: appglfw.hxx  texture.hxx
nbody/: CMakeLists.txt  nbody.cxx  tipsy.h
particles/: CMakeLists.txt  particles.cxx
particles-cuda/: CMakeLists.txt  particles-cuda.cxx
push/: README.md  push1.cxx  push2.cxx  push3.cxx  push4.cxx
shadertoy/: CMakeLists.txt  adam7.hxx  shadertoy.cxx
shadertoy-cuda/: CMakeLists.txt  shadertoy.cxx
shadertoy2/: CMakeLists.txt  scene.json  shadertoy2.cxx
shadertoy3/: CMakeLists.txt  bunny.json  shadertoy3.cxx
sprites/: CMakeLists.txt  sprites.cxx
sprites2/: CMakeCache.txt  CMakeLists.txt  sprites2.cxx
teapot/: CMakeLists.txt  teapot.cxx  teapot.h
viewer/: CMakeLists.txt  brdf.hxx  tonemapping.hxx  viewer.cxx
